[#10325913] Added overlay with z-index to prevent inputs from capturing clicks intended for dragging.

--- a/public/canvas_style.css
+++ b/public/canvas_style.css
@@ -2,6 +2,7 @@
 
 .canvas_object { position: absolute; z-index: 2; display: block; padding: 1px; cursor: move; }
 .canvas_object .content { overflow: hidden; display: block; line-height: 120%; }
+.canvas_object .overlay { position: absolute; top: 0; left: 0; background: transparent; z-index: 3; width: 100%; height: 100%; }
 
 
 /* this is a hack to get select tags to conform to explicitly-set height/width values */
